# jpegoptim

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
src/: jpegoptim.c
