cmake_minimum_required(VERSION 3.11)
project(jpegoptim)

SET(LIBRARY_DISCOVER_METHOD "CPM" CACHE STRING
        "Tool to use for discovering dependencies; options are: VCPKG, PKG_CONFIG, CPM")

file(GLOB jpegoptim_SRC "${PROJECT_SOURCE_DIR}/src/*.c")
add_executable(${PROJECT_NAME} ${jpegoptim_SRC})

IF(${LIBRARY_DISCOVER_METHOD} STREQUAL "VCPKG")
	FIND_PACKAGE(jpeg CONFIG REQUIRED)
ELSEIF(${LIBRARY_DISCOVER_METHOD} STREQUAL "PKG_CONFIG")
	INCLUDE(FindPkgConfig)
	PKG_CHECK_MODULES(JPEG REQUIRED jpeg)
	TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${JPEG_INCLUDE_DIRS})
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${JPEG_LIBRARIES})
ELSEIF(${LIBRARY_DISCOVER_METHOD} STREQUAL "CPM")
	INCLUDE(cmake/CPM.cmake)
	CPMADDPACKAGE(GITHUB_REPOSITORY libjpeg-turbo/libjpeg-turbo
		NAME libjpeg
		GIT_TAG 2.1.2)
	TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${libjpeg_SOURCE_DIR}
		${libjpeg_BINARY_DIR})
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE jpeg-static)
ENDIF()

ADD_COMPILE_DEFINITIONS(_CRT_SECURE_NO_WARNINGS)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE inc)
